--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,26 @@
 .bar3{top: 100%;}
 .bar3.toggle{top: 50%; margin-top: -1px; transform: rotate(-45deg);}
 
+/* aside */
+.aside{}
+.aside-bg{width: 100%; height: 100vh; position: fixed; top: 0; left: 0; background: rgba(0, 0, 0, 0.3); z-index: 1000;}
+.aside-lnb{position: fixed; top: 0; right: 0; z-index: 1001; max-width: 50rem; height: 100vh; background: var(--base-red); width: 90%;}
+.aside-inner{}
+.aside-inner .aside-close{}
+.aside-inner .aside-login{}
+.aside-inner .aside-login a{}
+.aside-inner .aside-login .bar{}
+.lesserafim_banner{}
+.lesserafim_banner img{}
+.aside_scroll{}
+.aside_scroll>ul{}
+.aside_scroll>ul>li{}
+.aside_scroll>ul>li>a{}
+.aside_scroll .aside-num{}
+.aside_scroll .aside-num dt{}
+.aside_scroll .aside-num dd{}
+
+
 
 
 
