--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,19 @@
 .header{height: 100%;}
 .menu ul{margin: 0 !important;}
 .menu ul li{margin-right: 7rem;}
-.menu ul li a{font-size: 2rem; font-weight: 600;}
+.menu ul li a{display: block; font-size: 2rem; font-weight: 600;}
+
+.order{position: relative;}
+.order-ob-wrap{padding-top: 4rem; box-sizing: border-box; position: absolute; top: 0; left: -150%; display: none;}
+.order-ob{width: 30rem; height: 6.5rem; background: #fff; border-radius: 6px; border: 1px solid #000; display: flex; align-items:center; justify-content: center; box-sizing: border-box;}
+.order:hover>.order-ob-wrap{display: block;}
+.order-ob>button{height: 3rem; font-weight: 800; margin-right: 2rem; padding: 1rem 0; box-sizing: content-box; background: #fff; font-size: 1.6rem; cursor: pointer; display: block; display: flex; align-items: center;}
+.order-ob>button img{width: 2.5rem; height: 2.5rem; margin-right: 0.5rem;}
+
+
 .more-btn{width: 30px; height: 19px; position: relative;}
 .more-btn-wrap{width: 100%; height: 100%;}
+
 .bar{display: block; width: 100%; height: 0.4rem; background: var(--base-black); position: absolute; transition: 0.3s;}
 .bar1{top: 0;}
 .bar1.toggle{top: 50%; margin-top: -1px; transform: rotate(45deg);}
@@ -76,6 +86,9 @@
     /* header */
     #header{padding: 2rem 0;}
     #header>.inner{padding-top: 1rem;}
+
+    .order-ob-wrap{top: -20%; left: -200%;}
+
     .menu ul li{margin-right: 4rem;}
     .menu ul li a{font-size: 1.5rem;}
     .more-btn img{width: 25px; height: 20px;}
