--- a/css/root.css
+++ b/css/root.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Rubik:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Righteous&family=Rubik:wght@400;500;600;700;800;900&display=swap');
 
 /* layout */
 html, body{margin: 0; padding: 0; font-size: 10px;}
@@ -21,7 +21,9 @@ body{font-family: 'Noto Sans KR', sans-serif;}
 li{list-style: none;}
 a{text-decoration: none; color: #000;}
 
+.flex{display: flex;}
 .flex-between{display: flex; justify-content: space-between;}
+.flex-center{display: flex; align-items: center;}
 .flex-between-center{display: flex; justify-content: space-between; align-items: center;}
 
 .db{display: block;}
